Updated icon-label.  Added extraction data width property for use by icon-label.  Extractions now wrap.  Updated version to 2.2.0

--- a/demo/index.html
+++ b/demo/index.html
@@ -102,7 +102,8 @@ limitations under the License.
           link: 'https://www.android.com/',
           provenances: [],
           styleClass: 'extraction-google',
-          text: 'Android'
+          text: 'Android',
+          width: 250
         }, {
           classifications: {},
           confidence: 66,
@@ -110,7 +111,8 @@ limitations under the License.
           link: 'https://www.polymer-project.org/',
           provenances: [],
           styleClass: 'extraction-google',
-          text: 'Polymer Project'
+          text: 'Polymer Project',
+          width: 250
         }]
       }];
 
