--- a/test/extraction-grid-test.html
+++ b/test/extraction-grid-test.html
@@ -84,6 +84,7 @@ limitations under the License.
         expect(element.dataStyleClassProperty).to.equal('styleClass');
         expect(element.dataTextProperty).to.equal('text');
         expect(element.dataTypeProperty).to.equal('type');
+        expect(element.dataWidthProperty).to.equal('width');
         expect(element.nameProperty).to.equal('name');
         expect(element.resultId).to.equal('1234');
         expect(element.resultType).to.equal('document');
