Added border radius.  Updated version to 2.2.1

--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -94,6 +94,7 @@ Custom property                            | Description                        
       }
 
       .extraction-item {
+        border-radius: 2px;
         margin: 5px;
         padding: 5px;
       }
